cross/target/thumbv6m-none-eabi/debug/build/num-rational-410a2094f563a6d1/stderr
error[E0463]: can't find crate for `std`
  |
  = note: the `thumbv6m-none-eabi` target may not support the standard library
  = note: `std` is required by `probe0` because it does not declare `#![no_std]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
error: cannot find macro `format` in this scope
 --> <anon>:2:26
  |
2 | pub fn probe() { let _ = format!("{:e}", 0_isize); }
  |                          ^^^^^^

error: aborting due to previous error

